Added frame and row styling

--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <title>Fluid Basic Layout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/typography.css">
     <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/utilities.css">
 </head>
 <body>
+<div class="page">
+    <header class="page__header">
+        <div class="header__rows">
+            <div class="row"></div>
+        </div>
+    </header>
+    <div class="page__content">
+        <div class="content__rows">
+            <div class="row"></div>
+        </div>
+    </div>
+    <footer class="page__footer">
+        <div class="footer__rows">
+            <div class="row"></div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
