Added header and footer style to theme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 <div class="page">
     <header class="page__header">
         <div class="header__rows">
-            <div class="row"></div>
+            <div class="row flex">
+                <a class="logo" href="#">Logo</a>
+                <div>
+                    <nav>
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                        <a href="#">Link</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <div class="page__content">
@@ -24,7 +34,14 @@
     </div>
     <footer class="page__footer">
         <div class="footer__rows">
-            <div class="row"></div>
+            <div class="row flex">
+                <div>
+                    <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
+                </div>
+                <div>
+                    <a href="https://github.com/guidoslotboom" target="_blank">© 2022 Guido Slotboom</a>
+                </div>
+            </div>
         </div>
     </footer>
 </div>
