--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
     <header class="page__header">
         <div class="header__rows">
             <div class="row flex">
-                <a class="logo" href="#">Logo</a>
+                <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="#">Link</a>
-                        <a href="#">Link</a>
-                        <a href="#">Link</a>
-                        <a href="#">Link</a>
+                        <a href="typography.html">Typography</a>
                     </nav>
                 </div>
             </div>
@@ -29,7 +26,36 @@
     </header>
     <div class="page__content">
         <div class="content__rows">
-            <div class="row"></div>
+            
+            <div class="row grid grid-cols--fit-lg">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+            </div>
+
+            <div class="row grid grid-cols--fit-md">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
+                <div class="col">Col 05</div>
+                <div class="col">Col 06</div>
+            </div>
+
+            <div class="row grid grid-cols--fit-sm">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
+                <div class="col">Col 05</div>
+                <div class="col">Col 06</div>
+                <div class="col">Col 07</div>
+                <div class="col">Col 08</div>
+                <div class="col">Col 09</div>
+                <div class="col">Col 10</div>
+                <div class="col">Col 11</div>
+                <div class="col">Col 12</div>
+            </div>
+
         </div>
     </div>
     <footer class="page__footer">
