Pages Columns span & Columns auto

--- a/columns-auto.html
+++ b/columns-auto.html
@@ -28,12 +28,34 @@
     </header>
     <div class="page__content">
         <div class="content__rows">
+            
+            <div class="row grid grid-cols--fit-lg">
+                <div class="col">01</div>
+                <div class="col">02</div>
+            </div>
 
-            <div class="row grid grid-cols">
-                <div class="col-span-12">
-                    <h1>Fluid basic layout</h1>
-                    <p>A side project</p>
-                </div>
+            <div class="row grid grid-cols--fit-md">
+                <div class="col">01</div>
+                <div class="col">02</div>
+                <div class="col">03</div>
+                <div class="col">04</div>
+                <div class="col">05</div>
+                <div class="col">06</div>
+            </div>
+
+            <div class="row grid grid-cols--fit-sm">
+                <div class="col">01</div>
+                <div class="col">02</div>
+                <div class="col">03</div>
+                <div class="col">04</div>
+                <div class="col">05</div>
+                <div class="col">06</div>
+                <div class="col">07</div>
+                <div class="col">08</div>
+                <div class="col">09</div>
+                <div class="col">10</div>
+                <div class="col">11</div>
+                <div class="col">12</div>
             </div>
 
         </div>
