--- a/typography.html
+++ b/typography.html
@@ -18,6 +18,8 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
+                        <a href="columns-auto.html">Columns auto</a>
+                        <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
