--- a/columns-same.html
+++ b/columns-same.html
@@ -29,72 +29,32 @@
     </header>
     <div class="page__content">
         <div class="content__rows">
-            
-            <div class="row grid grid-cols">
-                <div class="col-span-12">span 12</div>
-            </div>
 
-            <div class="row grid grid-cols">
-                <div class="col-span-8">span 8</div>
-                <div class="col-span-4">span 4</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-span-7">span 7</div>
-                <div class="col-span-5">span 5</div>
-            </div>
-
-            <div class="row grid grid-cols">
+            <div class="row grid grid-cols cols-same">
                 <div class="col-span-6">span 6</div>
                 <div class="col-span-6">span 6</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="row grid grid-cols cols-same">
                 <div class="col-span-4">span 4</div>
                 <div class="col-span-4">span 4</div>
                 <div class="col-span-4">span 4</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="row grid grid-cols cols-same">
                 <div class="col-span-3">span 3</div>
                 <div class="col-span-3">span 3</div>
                 <div class="col-span-3">span 3</div>
                 <div class="col-span-3">span 3</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="row grid grid-cols cols-same">
                 <div class="col-span-2">span 2</div>
                 <div class="col-span-2">span 2</div>
                 <div class="col-span-2">span 2</div>
                 <div class="col-span-2">span 2</div>
                 <div class="col-span-2">span 2</div>
                 <div class="col-span-2">span 2</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-span-1">span 1</div>
-                <div class="col-span-5">span 5</div>
-                <div class="col-span-5">span 5</div>
-                <div class="col-span-1">span 1</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-2">span 2</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-2-span-10">2 / span 10</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-3-span-8">3 / span 8</div>
-            </div>
-
-            <div class="row grid grid-cols">
-                <div class="col-4-span-6">4 / span 6</div>
             </div>
 
         </div>
