--- a/columns-same.html
+++ b/columns-same.html
@@ -30,31 +30,25 @@
     <div class="page__content">
         <div class="content__rows">
 
-            <div class="row grid grid-cols cols-same">
-                <div class="col-span-6">span 6</div>
-                <div class="col-span-6">span 6</div>
+            <div class="row grid grid-cols cols-span-6">
+                <div class="col">span 6</div>
+                <div class="col">span 6</div>
             </div>
 
-            <div class="row grid grid-cols cols-same">
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
+            <div class="row grid grid-cols cols-span-3">
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
             </div>
 
-            <div class="row grid grid-cols cols-same">
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
-            </div>
-
-            <div class="row grid grid-cols cols-same">
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
+            <div class="row grid grid-cols cols-span-2">
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
             </div>
 
         </div>
