--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div>
                     <nav>
                         <a href="columns-auto.html">Columns auto</a>
+                        <a href="columns-same.html">Columns same</a>
                         <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
