Modified the same columns media queries
Added informational text and modified the same columns media queries.

--- a/columns-auto.html
+++ b/columns-auto.html
@@ -29,6 +29,13 @@
     </header>
     <div class="page__content">
         <div class="content__rows">
+
+            <div class="row grid grid-cols">
+                <div class="col col-span-12">
+                    <h1>Columns auto</h1>
+                    <p>Grid with a flexible number of columns using auto-fit</p>
+                </div>
+            </div>
             
             <div class="row grid grid-cols--fit-lg">
                 <div class="col">01</div>
