--- a/columns-same.html
+++ b/columns-same.html
@@ -30,6 +30,13 @@
     <div class="page__content">
         <div class="content__rows">
 
+            <div class="row grid grid-cols">
+                <div class="col col-span-12">
+                    <h1>Columns same</h1>
+                    <p>Grid with class for the assigned number of columns and a class for span of the columns.</p>
+                </div>
+            </div>
+
             <div class="row grid grid-cols cols-span-6">
                 <div class="col">span 6</div>
                 <div class="col">span 6</div>
