--- a/columns-span.html
+++ b/columns-span.html
@@ -29,60 +29,67 @@
     </header>
     <div class="page__content">
         <div class="content__rows">
+
+            <div class="row grid grid-cols">
+                <div class="col col-span-12">
+                    <h1>Columns span</h1>
+                    <p>Grid with a class for the assigned number of columns and each column has its own class for the column span.</p>
+                </div>
+            </div>
             
             <div class="row grid grid-cols">
-                <div class="col-span-12">span 12</div>
+                <div class="col col-span-12">span 12</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-8">span 8</div>
-                <div class="col-span-4">span 4</div>
+                <div class="col col-span-8">span 8</div>
+                <div class="col col-span-4">span 4</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-7">span 7</div>
-                <div class="col-span-5">span 5</div>
+                <div class="col col-span-7">span 7</div>
+                <div class="col col-span-5">span 5</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-6">span 6</div>
-                <div class="col-span-6">span 6</div>
+                <div class="col col-span-6">span 6</div>
+                <div class="col col-span-6">span 6</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
+                <div class="col col-span-4">span 4</div>
+                <div class="col col-span-4">span 4</div>
+                <div class="col col-span-4">span 4</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
-                <div class="col-span-3">span 3</div>
+                <div class="col col-span-3">span 3</div>
+                <div class="col col-span-3">span 3</div>
+                <div class="col col-span-3">span 3</div>
+                <div class="col col-span-3">span 3</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-1">span 1</div>
-                <div class="col-span-5">span 5</div>
-                <div class="col-span-5">span 5</div>
-                <div class="col-span-1">span 1</div>
+                <div class="col col-span-1">span 1</div>
+                <div class="col col-span-5">span 5</div>
+                <div class="col col-span-5">span 5</div>
+                <div class="col col-span-1">span 1</div>
             </div>
 
             <div class="row grid grid-cols">
-                <div class="col-span-2">span 2</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-4">span 4</div>
-                <div class="col-span-2">span 2</div>
+                <div class="col col-span-2">span 2</div>
+                <div class="col col-span-4">span 4</div>
+                <div class="col col-span-4">span 4</div>
+                <div class="col col-span-2">span 2</div>
             </div>
 
             <div class="row grid grid-cols">
