Changes in class names and layout structure

--- a/columns-auto.html
+++ b/columns-auto.html
@@ -13,8 +13,8 @@
 <body>
 <div class="page">
     <header class="page__header">
-        <div class="header__rows">
-            <div class="row flex">
+        <div class="header__row">
+            <div class="flex">
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
@@ -28,21 +28,21 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__rows">
+        <div class="content__row">
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-12">
                     <h1>Columns auto</h1>
                     <p>Grid with a flexible number of columns using auto-fit</p>
                 </div>
             </div>
             
-            <div class="row grid grid-cols--fit-lg">
+            <div class="grid grid-cols--fit-lg">
                 <div class="col">01</div>
                 <div class="col">02</div>
             </div>
 
-            <div class="row grid grid-cols--fit-md">
+            <div class="grid grid-cols--fit-md">
                 <div class="col">01</div>
                 <div class="col">02</div>
                 <div class="col">03</div>
@@ -51,7 +51,7 @@
                 <div class="col">06</div>
             </div>
 
-            <div class="row grid grid-cols--fit-sm">
+            <div class="grid grid-cols--fit-sm">
                 <div class="col">01</div>
                 <div class="col">02</div>
                 <div class="col">03</div>
@@ -69,8 +69,38 @@
         </div>
     </div>
     <footer class="page__footer">
-        <div class="footer__rows">
-            <div class="row flex">
+
+        <div class="footer__row">
+            <div class="grid grid-cols">
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__row">
+            <div class="flex">
                 <div>
                     <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
                 </div>
@@ -79,6 +109,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </div>
 </body>
