--- a/columns-span.html
+++ b/columns-span.html
@@ -13,14 +13,11 @@
 <body>
 <div class="page">
     <header class="page__header">
-        <div class="header__rows">
-            <div class="row flex">
+        <div class="header__row">
+            <div class="flex">
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="columns-auto.html">Columns auto</a>
-                        <a href="columns-same.html">Columns same</a>
-                        <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
@@ -28,48 +25,48 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__rows">
+        <div class="content__row">
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-12">
                     <h1>Columns span</h1>
                     <p>Grid with a class for the assigned number of columns and each column has its own class for the column span.</p>
                 </div>
             </div>
             
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-12">span 12</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-8">span 8</div>
                 <div class="col col-span-4">span 4</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-7">span 7</div>
                 <div class="col col-span-5">span 5</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-6">span 6</div>
                 <div class="col col-span-6">span 6</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-4">span 4</div>
                 <div class="col col-span-4">span 4</div>
                 <div class="col col-span-4">span 4</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-3">span 3</div>
                 <div class="col col-span-3">span 3</div>
                 <div class="col col-span-3">span 3</div>
                 <div class="col col-span-3">span 3</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-2">span 2</div>
                 <div class="col col-span-2">span 2</div>
                 <div class="col col-span-2">span 2</div>
@@ -78,37 +75,67 @@
                 <div class="col col-span-2">span 2</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-1">span 1</div>
                 <div class="col col-span-5">span 5</div>
                 <div class="col col-span-5">span 5</div>
                 <div class="col col-span-1">span 1</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-2">span 2</div>
                 <div class="col col-span-4">span 4</div>
                 <div class="col col-span-4">span 4</div>
                 <div class="col col-span-2">span 2</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col-2-span-10">2 / span 10</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col-3-span-8">3 / span 8</div>
             </div>
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col-4-span-6">4 / span 6</div>
             </div>
 
         </div>
     </div>
     <footer class="page__footer">
-        <div class="footer__rows">
-            <div class="row flex">
+
+        <div class="footer__row">
+            <div class="grid grid-cols">
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__row">
+            <div class="flex">
                 <div>
                     <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
                 </div>
@@ -117,6 +144,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </div>
 </body>
