--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <div class="page">
     <header class="page__header">
-        <div class="header__rows">
-            <div class="row flex">
+        <div class="header__row">
+            <div class="flex">
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
@@ -28,9 +28,9 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__rows">
+        <div class="content__row">
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col-span-12">
                     <h1>Fluid basic layout</h1>
                     <p>A side project</p>
@@ -40,8 +40,38 @@
         </div>
     </div>
     <footer class="page__footer">
-        <div class="footer__rows">
-            <div class="row flex">
+
+        <div class="footer__row">
+            <div class="grid grid-cols">
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__row">
+            <div class="flex">
                 <div>
                     <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
                 </div>
@@ -50,6 +80,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </div>
 </body>
