--- a/columns-same.html
+++ b/columns-same.html
@@ -13,8 +13,8 @@
 <body>
 <div class="page">
     <header class="page__header">
-        <div class="header__rows">
-            <div class="row flex">
+        <div class="header__row">
+            <div class="flex">
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
@@ -28,41 +28,81 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__rows">
+        <div class="content__row">
 
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-span-12">
                     <h1>Columns same</h1>
                     <p>Grid with class for the assigned number of columns and a class for span of the columns.</p>
                 </div>
             </div>
 
-            <div class="row grid grid-cols cols-span-6">
+            <div class="grid grid-cols cols-span-6">
                 <div class="col">span 6</div>
                 <div class="col">span 6</div>
             </div>
 
-            <div class="row grid grid-cols cols-span-3">
+            <div class="grid grid-cols cols-span-3">
                 <div class="col">span 3</div>
                 <div class="col">span 3</div>
                 <div class="col">span 3</div>
                 <div class="col">span 3</div>
             </div>
 
-            <div class="row grid grid-cols cols-span-2">
+            <div class="grid grid-cols cols-span-2">
                 <div class="col">span 2</div>
                 <div class="col">span 2</div>
                 <div class="col">span 2</div>
                 <div class="col">span 2</div>
                 <div class="col">span 2</div>
                 <div class="col">span 2</div>
+            </div>
+
+            <div class="grid grid-cols cols-side-right">
+                <div class="col">span 8</div>
+                <div class="col">span 4</div>
+            </div>
+
+            <div class="grid grid-cols cols-side-left">
+                <div class="col">span 4</div>
+                <div class="col">span 8</div>
             </div>
 
         </div>
     </div>
     <footer class="page__footer">
-        <div class="footer__rows">
-            <div class="row flex">
+
+        <div class="footer__row">
+            <div class="grid grid-cols">
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__row">
+            <div class="flex">
                 <div>
                     <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
                 </div>
@@ -71,6 +111,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </div>
 </body>
