--- a/typography.html
+++ b/typography.html
@@ -13,8 +13,8 @@
 <body>
 <div class="page">
     <header class="page__header">
-        <div class="header__rows">
-            <div class="row flex">
+        <div class="header__row">
+            <div class="flex">
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
@@ -27,9 +27,9 @@
         </div>
     </header>
     <div class="page__content">
-        <div class="content__rows">
+        <div class="content__row">
             
-            <div class="row grid grid-cols">
+            <div class="grid grid-cols">
                 <div class="col col-3-span-8">
 
                     <h1>H1 the quick brown fox jumps on the lazy dog</h1>
@@ -64,8 +64,38 @@
         </div>
     </div>
     <footer class="page__footer">
-        <div class="footer__rows">
-            <div class="row flex">
+
+        <div class="footer__row">
+            <div class="grid grid-cols">
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+                <div class="col col-span-4">
+                    <h4>Columns</h4>
+                    <ul>
+                        <li><a href="columns-auto.html">Columns auto</a></li>
+                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-span.html">Columns span</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__row">
+            <div class="flex">
                 <div>
                     <a href="https://github.com/guidoslotboom/fluid-basic-layout" target="_blank">Fluid Basic Layout</a>
                 </div>
@@ -74,6 +104,7 @@
                 </div>
             </div>
         </div>
+
     </footer>
 </div>
 </body>
