Changes in class names and layout structure
Changes in class names and layout structure. Including changing the page names and notes.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="columns-auto.html">Columns auto</a>
-                        <a href="columns-same.html">Columns same</a>
-                        <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
@@ -46,24 +43,27 @@
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
