--- a/columns-fit.html
+++ b/columns-fit.html
@@ -18,9 +18,6 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="columns-auto.html">Columns auto</a>
-                        <a href="columns-same.html">Columns same</a>
-                        <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
@@ -32,30 +29,38 @@
 
             <div class="grid grid-cols">
                 <div class="col col-span-12">
-                    <h1>Columns same</h1>
-                    <p>Grid with class for the assigned number of columns and a class for span of the columns.</p>
+                    <h1>Columns fit</h1>
+                    <p>Grid with a flexible number of columns using auto-fit</p>
                 </div>
             </div>
-
-            <div class="grid grid-cols cols-span-6">
-                <div class="col">span 6</div>
-                <div class="col">span 6</div>
+            
+            <div class="grid grid-cols-fit-lg">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
             </div>
 
-            <div class="grid grid-cols cols-span-3">
-                <div class="col">span 3</div>
-                <div class="col">span 3</div>
-                <div class="col">span 3</div>
-                <div class="col">span 3</div>
+            <div class="grid grid-cols-fit-md">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
+                <div class="col">Col 05</div>
+                <div class="col">Col 06</div>
             </div>
 
-            <div class="grid grid-cols cols-span-2">
-                <div class="col">span 2</div>
-                <div class="col">span 2</div>
-                <div class="col">span 2</div>
-                <div class="col">span 2</div>
-                <div class="col">span 2</div>
-                <div class="col">span 2</div>
+            <div class="grid grid-cols-fit-sm">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
+                <div class="col">Col 05</div>
+                <div class="col">Col 06</div>
+                <div class="col">Col 07</div>
+                <div class="col">Col 08</div>
+                <div class="col">Col 09</div>
+                <div class="col">Col 10</div>
+                <div class="col">Col 11</div>
+                <div class="col">Col 12</div>
             </div>
 
         </div>
@@ -67,24 +72,27 @@
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
