--- a/columns-fixed.html
+++ b/columns-fixed.html
@@ -29,76 +29,40 @@
 
             <div class="grid grid-cols">
                 <div class="col col-span-12">
-                    <h1>Columns span</h1>
-                    <p>Grid with a class for the assigned number of columns and each column has its own class for the column span.</p>
+                    <h1>Columns fixed</h1>
+                    <p>Grids with a fixed number of columns using repeat with the number of columns and 1fr.</p>
                 </div>
             </div>
-            
-            <div class="grid grid-cols">
-                <div class="col col-span-12">span 12</div>
+
+            <div class="grid grid-cols-1">
+                <div class="col">Col 01</div>
             </div>
 
-            <div class="grid grid-cols">
-                <div class="col col-span-8">span 8</div>
-                <div class="col col-span-4">span 4</div>
+            <div class="grid grid-cols-2">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
             </div>
 
-            <div class="grid grid-cols">
-                <div class="col col-span-7">span 7</div>
-                <div class="col col-span-5">span 5</div>
+            <div class="grid grid-cols-3">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
             </div>
 
-            <div class="grid grid-cols">
-                <div class="col col-span-6">span 6</div>
-                <div class="col col-span-6">span 6</div>
+            <div class="grid grid-cols-4">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
             </div>
 
-            <div class="grid grid-cols">
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-                <div class="col col-span-3">span 3</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-2">span 2</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-1">span 1</div>
-                <div class="col col-span-5">span 5</div>
-                <div class="col col-span-5">span 5</div>
-                <div class="col col-span-1">span 1</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col col-span-2">span 2</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-4">span 4</div>
-                <div class="col col-span-2">span 2</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col-2-span-10">2 / span 10</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col-3-span-8">3 / span 8</div>
-            </div>
-
-            <div class="grid grid-cols">
-                <div class="col-4-span-6">4 / span 6</div>
+            <div class="grid grid-cols-6">
+                <div class="col">Col 01</div>
+                <div class="col">Col 02</div>
+                <div class="col">Col 03</div>
+                <div class="col">Col 04</div>
+                <div class="col">Col 05</div>
+                <div class="col">Col 06</div>
             </div>
 
         </div>
