--- a/columns-group.html
+++ b/columns-group.html
@@ -18,9 +18,6 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
-                        <a href="columns-auto.html">Columns auto</a>
-                        <a href="columns-same.html">Columns same</a>
-                        <a href="columns-span.html">Columns span</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
@@ -32,38 +29,30 @@
 
             <div class="grid grid-cols">
                 <div class="col col-span-12">
-                    <h1>Columns auto</h1>
-                    <p>Grid with a flexible number of columns using auto-fit</p>
+                    <h1>Columns group</h1>
+                    <p>Grid with class for the assigned number of columns and a class for span of the columns.</p>
                 </div>
             </div>
-            
-            <div class="grid grid-cols--fit-lg">
-                <div class="col">01</div>
-                <div class="col">02</div>
+
+            <div class="grid grid-cols cols-span-6">
+                <div class="col">span 6</div>
+                <div class="col">span 6</div>
             </div>
 
-            <div class="grid grid-cols--fit-md">
-                <div class="col">01</div>
-                <div class="col">02</div>
-                <div class="col">03</div>
-                <div class="col">04</div>
-                <div class="col">05</div>
-                <div class="col">06</div>
+            <div class="grid grid-cols cols-span-3">
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
+                <div class="col">span 3</div>
             </div>
 
-            <div class="grid grid-cols--fit-sm">
-                <div class="col">01</div>
-                <div class="col">02</div>
-                <div class="col">03</div>
-                <div class="col">04</div>
-                <div class="col">05</div>
-                <div class="col">06</div>
-                <div class="col">07</div>
-                <div class="col">08</div>
-                <div class="col">09</div>
-                <div class="col">10</div>
-                <div class="col">11</div>
-                <div class="col">12</div>
+            <div class="grid grid-cols cols-span-2">
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
+                <div class="col">span 2</div>
             </div>
 
         </div>
@@ -75,24 +64,27 @@
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
                 <div class="col col-span-4">
                     <h4>Columns</h4>
                     <ul>
-                        <li><a href="columns-auto.html">Columns auto</a></li>
-                        <li><a href="columns-same.html">Columns same</a></li>
+                        <li><a href="columns-fit.html">Columns fit</a></li>
+                        <li><a href="columns-fixed.html">Columns fixed</a></li>
+                        <li><a href="columns-group.html">Columns group</a></li>
                         <li><a href="columns-span.html">Columns span</a></li>
                     </ul>
                 </div>
