--- a/typography.html
+++ b/typography.html
@@ -32,7 +32,7 @@
 
                     <h1>H1 the quick brown fox jumps on the lazy dog</h1>
 
-                    <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <p class="text-lg">Body large medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
@@ -44,9 +44,20 @@
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Maecenas ex lacus, dignissim non fringilla in, blandit bibendum quam.</li>
+                        <li>Nulla porttitor augue nulla, id ultricies enim interdum a.</li>
+                    </ul>
+
                     <h4>H4 the quick brown fox jumps on the lazy dog</h4>
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+                    <blockquote>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                        <cite>Jane Doe</cite>
+                    </blockquote>
 
                     <h5>H5 the quick brown fox jumps on the lazy dog</h5>
 
@@ -55,6 +66,8 @@
                     <h6>H6 the quick brown fox jumps on the lazy dog</h6>
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    
+                    <p class="text-sm">Body text small lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
                 </div>
             </div>
