Add base.css file
Add basic CSS file for the styling of the content html elements.

--- a/typography.html
+++ b/typography.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/layout.css">
+    <link rel="stylesheet" href="assets/css/base.css">
     <link rel="stylesheet" href="assets/css/typography.css">
     <link rel="stylesheet" href="assets/css/theme.css">
     <link rel="stylesheet" href="assets/css/utilities.css">
@@ -40,6 +41,8 @@
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
+                    <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
                     <h3>H3 the quick brown fox jumps on the lazy dog</h3>
 
                     <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -49,6 +52,12 @@
                         <li>Maecenas ex lacus, dignissim non fringilla in, blandit bibendum quam.</li>
                         <li>Nulla porttitor augue nulla, id ultricies enim interdum a.</li>
                     </ul>
+
+                    <ol>
+                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                        <li>Maecenas ex lacus, dignissim non fringilla in, blandit bibendum quam.</li>
+                        <li>Nulla porttitor augue nulla, id ultricies enim interdum a.</li>
+                    </ol>
 
                     <h4>H4 the quick brown fox jumps on the lazy dog</h4>
 
