Add typography and base styling with variables

--- a/typography.html
+++ b/typography.html
@@ -45,7 +45,7 @@
 
                     <h3>H3 the quick brown fox jumps on the lazy dog</h3>
 
-                    <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices est sit amet dolor cursus tempus. Pellentesque luctus suscipit varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                    <p>Body text medium lorem ipsum dolor sit amet, consectetur adipiscing elit. May the text <strong>strong</strong> or <i>italicized</i>. Nunc ultrices est sit amet dolor cursus tempus. <q>This is the inline quotation element.</q> Pellentesque luctus suscipit varius. <u>The unarticulated annotation (underline) element.</u> Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <s>The strikethrough element.</s></p>
 
                     <ul>
                         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
