Added classes and custom properties for colors
Includes color page for example of the colors.

--- a/colors.html
+++ b/colors.html
@@ -28,41 +28,61 @@
     </header>
     <div class="page__content">
         <div class="content__row">
-
-            <div class="grid grid-cols">
-                <div class="col col-span-12">
-                    <h1>Columns fit</h1>
-                    <p>Grid with a flexible number of columns using auto-fit</p>
-                </div>
-            </div>
             
-            <div class="grid grid-cols-fit-lg">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-            </div>
+            <div class="grid grid-cols">
+                <div class="col col-2-span-10">
 
-            <div class="grid grid-cols-fit-md">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-                <div class="col">Col 03</div>
-                <div class="col">Col 04</div>
-                <div class="col">Col 05</div>
-                <div class="col">Col 06</div>
-            </div>
+                    <h1>Colors</h1>
 
-            <div class="grid grid-cols-fit-sm">
-                <div class="col">Col 01</div>
-                <div class="col">Col 02</div>
-                <div class="col">Col 03</div>
-                <div class="col">Col 04</div>
-                <div class="col">Col 05</div>
-                <div class="col">Col 06</div>
-                <div class="col">Col 07</div>
-                <div class="col">Col 08</div>
-                <div class="col">Col 09</div>
-                <div class="col">Col 10</div>
-                <div class="col">Col 11</div>
-                <div class="col">Col 12</div>
+                    <p><strong>Primary</strong></p>
+
+                    <div class="colors">
+                        <div class="primary-10">primary-10</div>
+                        <div class="primary-20">primary-20</div>
+                        <div class="primary-30">primary-30</div>
+                        <div class="primary-40">primary-40</div>
+                        <div class="primary-50">primary-50</div>
+                        <div class="primary-60">primary-60</div>
+                        <div class="primary-70">primary-70</div>
+                    </div>
+
+                    <p><strong>Secondary</strong></p>
+
+                    <div class="colors">
+                        <div class="secondary-10">secondary-10</div>
+                        <div class="secondary-20">secondary-20</div>
+                        <div class="secondary-30">secondary-30</div>
+                        <div class="secondary-40">secondary-40</div>
+                        <div class="secondary-50">secondary-50</div>
+                        <div class="secondary-60">secondary-60</div>
+                        <div class="secondary-70">secondary-70</div>
+                    </div>
+
+                    <p><strong>Accent</strong></p>
+
+                    <div class="colors">
+                        <div class="accent-10">accent-10</div>
+                        <div class="accent-20">accent-20</div>
+                        <div class="accent-30">accent-30</div>
+                        <div class="accent-40">accent-40</div>
+                        <div class="accent-50">accent-50</div>
+                        <div class="accent-60">accent-60</div>
+                        <div class="accent-70">accent-70</div>
+                    </div>
+
+                    <p><strong>Shades</strong></p>
+
+                    <div class="colors">
+                        <div class="neutral-10">neutral-10</div>
+                        <div class="neutral-20">neutral-20</div>
+                        <div class="neutral-30">neutral-30</div>
+                        <div class="neutral-40">neutral-40</div>
+                        <div class="neutral-50">neutral-50</div>
+                        <div class="neutral-60">neutral-60</div>
+                        <div class="neutral-70">neutral-70</div>
+                    </div>
+
+                </div>
             </div>
 
         </div>
