--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <a class="logo" href="index.html">Logo</a>
                 <div>
                     <nav>
+                        <a href="colors.html">Colors</a>
                         <a href="typography.html">Typography</a>
                     </nav>
                 </div>
