Added style for text elements
View on the typography example page.

--- a/colors.html
+++ b/colors.html
@@ -36,7 +36,7 @@
 
                     <p><strong>Primary</strong></p>
 
-                    <div class="colors">
+                    <div class="colors text-code">
                         <div class="primary-10">primary-10</div>
                         <div class="primary-20">primary-20</div>
                         <div class="primary-30">primary-30</div>
@@ -48,7 +48,7 @@
 
                     <p><strong>Secondary</strong></p>
 
-                    <div class="colors">
+                    <div class="colors text-code">
                         <div class="secondary-10">secondary-10</div>
                         <div class="secondary-20">secondary-20</div>
                         <div class="secondary-30">secondary-30</div>
@@ -60,7 +60,7 @@
 
                     <p><strong>Accent</strong></p>
 
-                    <div class="colors">
+                    <div class="colors text-code">
                         <div class="accent-10">accent-10</div>
                         <div class="accent-20">accent-20</div>
                         <div class="accent-30">accent-30</div>
@@ -70,9 +70,9 @@
                         <div class="accent-70">accent-70</div>
                     </div>
 
-                    <p><strong>Shades</strong></p>
+                    <p><strong>Neutral</strong></p>
 
-                    <div class="colors">
+                    <div class="colors text-code">
                         <div class="neutral-10">neutral-10</div>
                         <div class="neutral-20">neutral-20</div>
                         <div class="neutral-30">neutral-30</div>
