Add a show-grid class to highlight the columns

--- a/columns-fit.html
+++ b/columns-fit.html
@@ -35,6 +35,9 @@
                     <p>Grid with a flexible number of columns using auto-fit</p>
                 </div>
             </div>
+
+        </div>
+        <div class="content__row show-grid">
             
             <div class="grid grid-cols-fit-lg">
                 <div class="col">Col 01</div>
