--- a/columns-fixed.html
+++ b/columns-fixed.html
@@ -36,6 +36,9 @@
                 </div>
             </div>
 
+        </div>
+        <div class="content__row show-grid">
+
             <div class="grid grid-cols-1">
                 <div class="col">Col 01</div>
             </div>
