--- a/columns-group.html
+++ b/columns-group.html
@@ -36,6 +36,9 @@
                 </div>
             </div>
 
+        </div>
+        <div class="content__row show-grid">
+
             <div class="grid grid-cols cols-span-6">
                 <div class="col">span 6</div>
                 <div class="col">span 6</div>
