--- a/columns-span.html
+++ b/columns-span.html
@@ -35,6 +35,9 @@
                     <p>Grid with a class for the assigned number of columns and each column has its own class for the column span.</p>
                 </div>
             </div>
+
+        </div>
+        <div class="content__row show-grid">
             
             <div class="grid grid-cols">
                 <div class="col col-span-12">span 12</div>
@@ -92,15 +95,15 @@
             </div>
 
             <div class="grid grid-cols">
-                <div class="col-2-span-10">2 / span 10</div>
+                <div class="col col-2-span-10">2 / span 10</div>
             </div>
 
             <div class="grid grid-cols">
-                <div class="col-3-span-8">3 / span 8</div>
+                <div class="col col-3-span-8">3 / span 8</div>
             </div>
 
             <div class="grid grid-cols">
-                <div class="col-4-span-6">4 / span 6</div>
+                <div class="col col-4-span-6">4 / span 6</div>
             </div>
 
         </div>
